# qlik-engine-helper

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/qlik_engine_helper/: __init__.py  __main__.py  api_methods.py  app_handler.py  main.py
tests/: foo_test.py
